--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 ---
-
+<h1 style="background-image: url('{{ site.baseurl }}/assets/GitHubActionsGreen.png');"></h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
 
 <p class="view">by {{ page.author | default: site.author }}</p>
-
+<div class="hero">
+  <img class="feature-img" src="{{ page.background | relative_url }}" />
+</div>
 {{content}}
 
 {% if page.tags %}
