--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,31 @@
 layout: default
 ---
 <h1 style="background-image: url('{{ site.baseurl }}/assets/GitHubActionsGreen.png');"></h1>
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<p class="view">{{ page.date | date: "%-d %B %Y" }} by {{ page.author | default: site.author }}</p>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+{% if page.background %}
 <div class="hero">
   <img class="feature-img" src="{{ page.background | relative_url }}" />
 </div>
+{% endif %}
+
 {{content}}
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
+
+<p>
+  <div class="post-nav">
+    <p>
+      {% if page.previous.url %}
+      <a href="{{page.previous.url}}">&#8672;&nbsp;{{page.previous.title}}</a>
+      {% endif %}
+    </p>
+    <p>
+      {% if page.next.url %}
+      <a href="{{page.next.url}}">{{page.next.title}}&nbsp;&#8674;</a>
+      {% endif %}
+    </p>
+  </div>
+</p>
